# ParserShopBot.YourCode

./: .env.development  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
db/: database.py  database.sql  init_db.py  orm.py
src/browser/: service.py
src/converter/: service.py
