[project]
name = "parsershopbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.19.0",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "currencyconverter>=0.18.5",
    "forex-python>=1.8",
    "httpx>=0.28.1",
    "playwright>=1.51.0",
    "psycopg>=3.2.6",
    "python-dotenv>=1.1.0",
]
